Fixed last commit.

--- a/paper/hadoop2_wordcount.tex
+++ b/paper/hadoop2_wordcount.tex
@@ -4,262 +4,86 @@
 \sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
 \begin{picture}(1000,600)(0,0)
 \sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
-\put(171.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,131){\makebox(0,0)[r]{-1}}
+\put(191.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,131){\makebox(0,0)[r]{ 26}}
 \put(919.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,166.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,166){\makebox(0,0)[r]{-0.8}}
-\put(919.0,166.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,200.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,200){\makebox(0,0)[r]{-0.6}}
-\put(919.0,200.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,234.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,234){\makebox(0,0)[r]{-0.4}}
-\put(919.0,234.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,269.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,269){\makebox(0,0)[r]{-0.2}}
-\put(919.0,269.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,304.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,304){\makebox(0,0)[r]{ 0}}
+\put(191.0,174.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,174){\makebox(0,0)[r]{ 26.5}}
+\put(919.0,174.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,217.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,217){\makebox(0,0)[r]{ 27}}
+\put(919.0,217.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,260.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,260){\makebox(0,0)[r]{ 27.5}}
+\put(919.0,260.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,304.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,304){\makebox(0,0)[r]{ 28}}
 \put(919.0,304.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,338.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,338){\makebox(0,0)[r]{ 0.2}}
-\put(919.0,338.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,373.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,373){\makebox(0,0)[r]{ 0.4}}
-\put(919.0,373.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,407.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,407){\makebox(0,0)[r]{ 0.6}}
-\put(919.0,407.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,442.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,442){\makebox(0,0)[r]{ 0.8}}
-\put(919.0,442.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,476.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(151,476){\makebox(0,0)[r]{ 1}}
+\put(191.0,347.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,347){\makebox(0,0)[r]{ 28.5}}
+\put(919.0,347.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,390.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,390){\makebox(0,0)[r]{ 29}}
+\put(919.0,390.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,433.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,433){\makebox(0,0)[r]{ 29.5}}
+\put(919.0,433.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(191.0,476.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(171,476){\makebox(0,0)[r]{ 30}}
 \put(919.0,476.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(171,90){\makebox(0,0){-10}}
-\put(171.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(363.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(363,90){\makebox(0,0){-5}}
-\put(363.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(555.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(555,90){\makebox(0,0){ 0}}
-\put(555.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(747.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(747,90){\makebox(0,0){ 5}}
-\put(747.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(191,90){\makebox(0,0){ 0}}
+\put(191.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(274.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(274,90){\makebox(0,0){ 2}}
+\put(274.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(357.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(357,90){\makebox(0,0){ 4}}
+\put(357.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(440.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(440,90){\makebox(0,0){ 6}}
+\put(440.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(523.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(523,90){\makebox(0,0){ 8}}
+\put(523.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(607.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(607,90){\makebox(0,0){ 10}}
+\put(607.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(690.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(690,90){\makebox(0,0){ 12}}
+\put(690.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(773.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(773,90){\makebox(0,0){ 14}}
+\put(773.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(856.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(856,90){\makebox(0,0){ 16}}
+\put(856.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
 \put(939.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(939,90){\makebox(0,0){ 10}}
+\put(939,90){\makebox(0,0){ 18}}
 \put(939.0,456.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(171.0,131.0){\rule[-0.200pt]{0.400pt}{83.110pt}}
-\put(171.0,131.0){\rule[-0.200pt]{185.011pt}{0.400pt}}
+\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{83.110pt}}
+\put(191.0,131.0){\rule[-0.200pt]{180.193pt}{0.400pt}}
 \put(939.0,131.0){\rule[-0.200pt]{0.400pt}{83.110pt}}
-\put(171.0,476.0){\rule[-0.200pt]{185.011pt}{0.400pt}}
+\put(191.0,476.0){\rule[-0.200pt]{180.193pt}{0.400pt}}
 \put(30,303){\makebox(0,0){Runtime}}
-\put(555,29){\makebox(0,0){Number of Nodes}}
-\put(555,538){\makebox(0,0){Hadoop 2 WordCount Runtimes}}
-\put(779,436){\makebox(0,0)[r]{WordCount}}
-\put(799.0,436.0){\rule[-0.200pt]{24.090pt}{0.400pt}}
-\put(171,397){\usebox{\plotpoint}}
-\multiput(171.59,390.15)(0.488,-2.013){13}{\rule{0.117pt}{1.650pt}}
-\multiput(170.17,393.58)(8.000,-27.575){2}{\rule{0.400pt}{0.825pt}}
-\multiput(179.59,358.74)(0.488,-2.145){13}{\rule{0.117pt}{1.750pt}}
-\multiput(178.17,362.37)(8.000,-29.368){2}{\rule{0.400pt}{0.875pt}}
-\multiput(187.59,324.28)(0.485,-2.628){11}{\rule{0.117pt}{2.100pt}}
-\multiput(186.17,328.64)(7.000,-30.641){2}{\rule{0.400pt}{1.050pt}}
-\multiput(194.59,290.53)(0.488,-2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(193.17,294.26)(8.000,-30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(202.59,256.74)(0.488,-2.145){13}{\rule{0.117pt}{1.750pt}}
-\multiput(201.17,260.37)(8.000,-29.368){2}{\rule{0.400pt}{0.875pt}}
-\multiput(210.59,224.36)(0.488,-1.947){13}{\rule{0.117pt}{1.600pt}}
-\multiput(209.17,227.68)(8.000,-26.679){2}{\rule{0.400pt}{0.800pt}}
-\multiput(218.59,194.42)(0.485,-1.942){11}{\rule{0.117pt}{1.586pt}}
-\multiput(217.17,197.71)(7.000,-22.709){2}{\rule{0.400pt}{0.793pt}}
-\multiput(225.59,170.43)(0.488,-1.286){13}{\rule{0.117pt}{1.100pt}}
-\multiput(224.17,172.72)(8.000,-17.717){2}{\rule{0.400pt}{0.550pt}}
-\multiput(233.59,151.47)(0.488,-0.956){13}{\rule{0.117pt}{0.850pt}}
-\multiput(232.17,153.24)(8.000,-13.236){2}{\rule{0.400pt}{0.425pt}}
-\multiput(241.00,138.93)(0.494,-0.488){13}{\rule{0.500pt}{0.117pt}}
-\multiput(241.00,139.17)(6.962,-8.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(256.00,132.59)(0.671,0.482){9}{\rule{0.633pt}{0.116pt}}
-\multiput(256.00,131.17)(6.685,6.000){2}{\rule{0.317pt}{0.400pt}}
-\multiput(264.59,138.00)(0.488,0.824){13}{\rule{0.117pt}{0.750pt}}
-\multiput(263.17,138.00)(8.000,11.443){2}{\rule{0.400pt}{0.375pt}}
-\multiput(272.59,151.00)(0.488,1.220){13}{\rule{0.117pt}{1.050pt}}
-\multiput(271.17,151.00)(8.000,16.821){2}{\rule{0.400pt}{0.525pt}}
-\multiput(280.59,170.00)(0.485,1.789){11}{\rule{0.117pt}{1.471pt}}
-\multiput(279.17,170.00)(7.000,20.946){2}{\rule{0.400pt}{0.736pt}}
-\multiput(287.59,194.00)(0.488,1.880){13}{\rule{0.117pt}{1.550pt}}
-\multiput(286.17,194.00)(8.000,25.783){2}{\rule{0.400pt}{0.775pt}}
-\multiput(295.59,223.00)(0.488,2.079){13}{\rule{0.117pt}{1.700pt}}
-\multiput(294.17,223.00)(8.000,28.472){2}{\rule{0.400pt}{0.850pt}}
-\multiput(303.59,255.00)(0.488,2.277){13}{\rule{0.117pt}{1.850pt}}
-\multiput(302.17,255.00)(8.000,31.160){2}{\rule{0.400pt}{0.925pt}}
-\multiput(311.59,290.00)(0.485,2.552){11}{\rule{0.117pt}{2.043pt}}
-\multiput(310.17,290.00)(7.000,29.760){2}{\rule{0.400pt}{1.021pt}}
-\multiput(318.59,324.00)(0.488,2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(317.17,324.00)(8.000,30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(326.59,358.00)(0.488,2.079){13}{\rule{0.117pt}{1.700pt}}
-\multiput(325.17,358.00)(8.000,28.472){2}{\rule{0.400pt}{0.850pt}}
-\multiput(334.59,390.00)(0.488,1.814){13}{\rule{0.117pt}{1.500pt}}
-\multiput(333.17,390.00)(8.000,24.887){2}{\rule{0.400pt}{0.750pt}}
-\multiput(342.59,418.00)(0.485,1.789){11}{\rule{0.117pt}{1.471pt}}
-\multiput(341.17,418.00)(7.000,20.946){2}{\rule{0.400pt}{0.736pt}}
-\multiput(349.59,442.00)(0.488,1.154){13}{\rule{0.117pt}{1.000pt}}
-\multiput(348.17,442.00)(8.000,15.924){2}{\rule{0.400pt}{0.500pt}}
-\multiput(357.59,460.00)(0.488,0.692){13}{\rule{0.117pt}{0.650pt}}
-\multiput(356.17,460.00)(8.000,9.651){2}{\rule{0.400pt}{0.325pt}}
-\multiput(365.00,471.59)(0.821,0.477){7}{\rule{0.740pt}{0.115pt}}
-\multiput(365.00,470.17)(6.464,5.000){2}{\rule{0.370pt}{0.400pt}}
-\put(373,474.17){\rule{1.500pt}{0.400pt}}
-\multiput(373.00,475.17)(3.887,-2.000){2}{\rule{0.750pt}{0.400pt}}
-\multiput(380.59,471.51)(0.488,-0.626){13}{\rule{0.117pt}{0.600pt}}
-\multiput(379.17,472.75)(8.000,-8.755){2}{\rule{0.400pt}{0.300pt}}
-\multiput(388.59,460.47)(0.488,-0.956){13}{\rule{0.117pt}{0.850pt}}
-\multiput(387.17,462.24)(8.000,-13.236){2}{\rule{0.400pt}{0.425pt}}
-\multiput(396.59,444.02)(0.488,-1.418){13}{\rule{0.117pt}{1.200pt}}
-\multiput(395.17,446.51)(8.000,-19.509){2}{\rule{0.400pt}{0.600pt}}
-\multiput(404.59,420.18)(0.485,-2.018){11}{\rule{0.117pt}{1.643pt}}
-\multiput(403.17,423.59)(7.000,-23.590){2}{\rule{0.400pt}{0.821pt}}
-\multiput(411.59,393.36)(0.488,-1.947){13}{\rule{0.117pt}{1.600pt}}
-\multiput(410.17,396.68)(8.000,-26.679){2}{\rule{0.400pt}{0.800pt}}
-\multiput(419.59,362.53)(0.488,-2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(418.17,366.26)(8.000,-30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(427.59,328.53)(0.488,-2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(426.17,332.26)(8.000,-30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(435.59,294.32)(0.488,-2.277){13}{\rule{0.117pt}{1.850pt}}
-\multiput(434.17,298.16)(8.000,-31.160){2}{\rule{0.400pt}{0.925pt}}
-\multiput(443.59,258.76)(0.485,-2.476){11}{\rule{0.117pt}{1.986pt}}
-\multiput(442.17,262.88)(7.000,-28.879){2}{\rule{0.400pt}{0.993pt}}
-\multiput(450.59,227.36)(0.488,-1.947){13}{\rule{0.117pt}{1.600pt}}
-\multiput(449.17,230.68)(8.000,-26.679){2}{\rule{0.400pt}{0.800pt}}
-\multiput(458.59,198.19)(0.488,-1.682){13}{\rule{0.117pt}{1.400pt}}
-\multiput(457.17,201.09)(8.000,-23.094){2}{\rule{0.400pt}{0.700pt}}
-\multiput(466.59,173.02)(0.488,-1.418){13}{\rule{0.117pt}{1.200pt}}
-\multiput(465.17,175.51)(8.000,-19.509){2}{\rule{0.400pt}{0.600pt}}
-\multiput(474.59,152.03)(0.485,-1.103){11}{\rule{0.117pt}{0.957pt}}
-\multiput(473.17,154.01)(7.000,-13.013){2}{\rule{0.400pt}{0.479pt}}
-\multiput(481.00,139.93)(0.494,-0.488){13}{\rule{0.500pt}{0.117pt}}
-\multiput(481.00,140.17)(6.962,-8.000){2}{\rule{0.250pt}{0.400pt}}
-\put(489,131.17){\rule{1.700pt}{0.400pt}}
-\multiput(489.00,132.17)(4.472,-2.000){2}{\rule{0.850pt}{0.400pt}}
-\multiput(497.00,131.59)(0.671,0.482){9}{\rule{0.633pt}{0.116pt}}
-\multiput(497.00,130.17)(6.685,6.000){2}{\rule{0.317pt}{0.400pt}}
-\multiput(505.59,137.00)(0.485,0.874){11}{\rule{0.117pt}{0.786pt}}
-\multiput(504.17,137.00)(7.000,10.369){2}{\rule{0.400pt}{0.393pt}}
-\multiput(512.59,149.00)(0.488,1.154){13}{\rule{0.117pt}{1.000pt}}
-\multiput(511.17,149.00)(8.000,15.924){2}{\rule{0.400pt}{0.500pt}}
-\multiput(520.59,167.00)(0.488,1.550){13}{\rule{0.117pt}{1.300pt}}
-\multiput(519.17,167.00)(8.000,21.302){2}{\rule{0.400pt}{0.650pt}}
-\multiput(528.59,191.00)(0.488,1.880){13}{\rule{0.117pt}{1.550pt}}
-\multiput(527.17,191.00)(8.000,25.783){2}{\rule{0.400pt}{0.775pt}}
-\multiput(536.59,220.00)(0.485,2.399){11}{\rule{0.117pt}{1.929pt}}
-\multiput(535.17,220.00)(7.000,27.997){2}{\rule{0.400pt}{0.964pt}}
-\multiput(543.59,252.00)(0.488,2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(542.17,252.00)(8.000,30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(551.59,286.00)(0.488,2.277){13}{\rule{0.117pt}{1.850pt}}
-\multiput(550.17,286.00)(8.000,31.160){2}{\rule{0.400pt}{0.925pt}}
-\multiput(559.59,321.00)(0.488,2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(558.17,321.00)(8.000,30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(567.59,355.00)(0.485,2.399){11}{\rule{0.117pt}{1.929pt}}
-\multiput(566.17,355.00)(7.000,27.997){2}{\rule{0.400pt}{0.964pt}}
-\multiput(574.59,387.00)(0.488,1.880){13}{\rule{0.117pt}{1.550pt}}
-\multiput(573.17,387.00)(8.000,25.783){2}{\rule{0.400pt}{0.775pt}}
-\multiput(582.59,416.00)(0.488,1.550){13}{\rule{0.117pt}{1.300pt}}
-\multiput(581.17,416.00)(8.000,21.302){2}{\rule{0.400pt}{0.650pt}}
-\multiput(590.59,440.00)(0.488,1.154){13}{\rule{0.117pt}{1.000pt}}
-\multiput(589.17,440.00)(8.000,15.924){2}{\rule{0.400pt}{0.500pt}}
-\multiput(598.59,458.00)(0.485,0.874){11}{\rule{0.117pt}{0.786pt}}
-\multiput(597.17,458.00)(7.000,10.369){2}{\rule{0.400pt}{0.393pt}}
-\multiput(605.00,470.59)(0.671,0.482){9}{\rule{0.633pt}{0.116pt}}
-\multiput(605.00,469.17)(6.685,6.000){2}{\rule{0.317pt}{0.400pt}}
-\put(613,474.17){\rule{1.700pt}{0.400pt}}
-\multiput(613.00,475.17)(4.472,-2.000){2}{\rule{0.850pt}{0.400pt}}
-\multiput(621.00,472.93)(0.494,-0.488){13}{\rule{0.500pt}{0.117pt}}
-\multiput(621.00,473.17)(6.962,-8.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(629.59,462.03)(0.485,-1.103){11}{\rule{0.117pt}{0.957pt}}
-\multiput(628.17,464.01)(7.000,-13.013){2}{\rule{0.400pt}{0.479pt}}
-\multiput(636.59,446.02)(0.488,-1.418){13}{\rule{0.117pt}{1.200pt}}
-\multiput(635.17,448.51)(8.000,-19.509){2}{\rule{0.400pt}{0.600pt}}
-\multiput(644.59,423.19)(0.488,-1.682){13}{\rule{0.117pt}{1.400pt}}
-\multiput(643.17,426.09)(8.000,-23.094){2}{\rule{0.400pt}{0.700pt}}
-\multiput(652.59,396.36)(0.488,-1.947){13}{\rule{0.117pt}{1.600pt}}
-\multiput(651.17,399.68)(8.000,-26.679){2}{\rule{0.400pt}{0.800pt}}
-\multiput(660.59,364.76)(0.485,-2.476){11}{\rule{0.117pt}{1.986pt}}
-\multiput(659.17,368.88)(7.000,-28.879){2}{\rule{0.400pt}{0.993pt}}
-\multiput(667.59,332.32)(0.488,-2.277){13}{\rule{0.117pt}{1.850pt}}
-\multiput(666.17,336.16)(8.000,-31.160){2}{\rule{0.400pt}{0.925pt}}
-\multiput(675.59,297.53)(0.488,-2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(674.17,301.26)(8.000,-30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(683.59,263.53)(0.488,-2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(682.17,267.26)(8.000,-30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(691.59,230.36)(0.488,-1.947){13}{\rule{0.117pt}{1.600pt}}
-\multiput(690.17,233.68)(8.000,-26.679){2}{\rule{0.400pt}{0.800pt}}
-\multiput(699.59,200.18)(0.485,-2.018){11}{\rule{0.117pt}{1.643pt}}
-\multiput(698.17,203.59)(7.000,-23.590){2}{\rule{0.400pt}{0.821pt}}
-\multiput(706.59,175.02)(0.488,-1.418){13}{\rule{0.117pt}{1.200pt}}
-\multiput(705.17,177.51)(8.000,-19.509){2}{\rule{0.400pt}{0.600pt}}
-\multiput(714.59,154.47)(0.488,-0.956){13}{\rule{0.117pt}{0.850pt}}
-\multiput(713.17,156.24)(8.000,-13.236){2}{\rule{0.400pt}{0.425pt}}
-\multiput(722.59,140.51)(0.488,-0.626){13}{\rule{0.117pt}{0.600pt}}
-\multiput(721.17,141.75)(8.000,-8.755){2}{\rule{0.400pt}{0.300pt}}
-\put(730,131.17){\rule{1.500pt}{0.400pt}}
-\multiput(730.00,132.17)(3.887,-2.000){2}{\rule{0.750pt}{0.400pt}}
-\multiput(737.00,131.59)(0.821,0.477){7}{\rule{0.740pt}{0.115pt}}
-\multiput(737.00,130.17)(6.464,5.000){2}{\rule{0.370pt}{0.400pt}}
-\multiput(745.59,136.00)(0.488,0.692){13}{\rule{0.117pt}{0.650pt}}
-\multiput(744.17,136.00)(8.000,9.651){2}{\rule{0.400pt}{0.325pt}}
-\multiput(753.59,147.00)(0.488,1.154){13}{\rule{0.117pt}{1.000pt}}
-\multiput(752.17,147.00)(8.000,15.924){2}{\rule{0.400pt}{0.500pt}}
-\multiput(761.59,165.00)(0.485,1.789){11}{\rule{0.117pt}{1.471pt}}
-\multiput(760.17,165.00)(7.000,20.946){2}{\rule{0.400pt}{0.736pt}}
-\multiput(768.59,189.00)(0.488,1.814){13}{\rule{0.117pt}{1.500pt}}
-\multiput(767.17,189.00)(8.000,24.887){2}{\rule{0.400pt}{0.750pt}}
-\multiput(776.59,217.00)(0.488,2.079){13}{\rule{0.117pt}{1.700pt}}
-\multiput(775.17,217.00)(8.000,28.472){2}{\rule{0.400pt}{0.850pt}}
-\multiput(784.59,249.00)(0.488,2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(783.17,249.00)(8.000,30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(792.59,283.00)(0.485,2.552){11}{\rule{0.117pt}{2.043pt}}
-\multiput(791.17,283.00)(7.000,29.760){2}{\rule{0.400pt}{1.021pt}}
-\multiput(799.59,317.00)(0.488,2.277){13}{\rule{0.117pt}{1.850pt}}
-\multiput(798.17,317.00)(8.000,31.160){2}{\rule{0.400pt}{0.925pt}}
-\multiput(807.59,352.00)(0.488,2.079){13}{\rule{0.117pt}{1.700pt}}
-\multiput(806.17,352.00)(8.000,28.472){2}{\rule{0.400pt}{0.850pt}}
-\multiput(815.59,384.00)(0.488,1.880){13}{\rule{0.117pt}{1.550pt}}
-\multiput(814.17,384.00)(8.000,25.783){2}{\rule{0.400pt}{0.775pt}}
-\multiput(823.59,413.00)(0.485,1.789){11}{\rule{0.117pt}{1.471pt}}
-\multiput(822.17,413.00)(7.000,20.946){2}{\rule{0.400pt}{0.736pt}}
-\multiput(830.59,437.00)(0.488,1.220){13}{\rule{0.117pt}{1.050pt}}
-\multiput(829.17,437.00)(8.000,16.821){2}{\rule{0.400pt}{0.525pt}}
-\multiput(838.59,456.00)(0.488,0.824){13}{\rule{0.117pt}{0.750pt}}
-\multiput(837.17,456.00)(8.000,11.443){2}{\rule{0.400pt}{0.375pt}}
-\multiput(846.00,469.59)(0.671,0.482){9}{\rule{0.633pt}{0.116pt}}
-\multiput(846.00,468.17)(6.685,6.000){2}{\rule{0.317pt}{0.400pt}}
-\put(249.0,132.0){\rule[-0.200pt]{1.686pt}{0.400pt}}
-\multiput(861.00,473.93)(0.494,-0.488){13}{\rule{0.500pt}{0.117pt}}
-\multiput(861.00,474.17)(6.962,-8.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(869.59,463.47)(0.488,-0.956){13}{\rule{0.117pt}{0.850pt}}
-\multiput(868.17,465.24)(8.000,-13.236){2}{\rule{0.400pt}{0.425pt}}
-\multiput(877.59,447.43)(0.488,-1.286){13}{\rule{0.117pt}{1.100pt}}
-\multiput(876.17,449.72)(8.000,-17.717){2}{\rule{0.400pt}{0.550pt}}
-\multiput(885.59,425.42)(0.485,-1.942){11}{\rule{0.117pt}{1.586pt}}
-\multiput(884.17,428.71)(7.000,-22.709){2}{\rule{0.400pt}{0.793pt}}
-\multiput(892.59,399.36)(0.488,-1.947){13}{\rule{0.117pt}{1.600pt}}
-\multiput(891.17,402.68)(8.000,-26.679){2}{\rule{0.400pt}{0.800pt}}
-\multiput(900.59,368.74)(0.488,-2.145){13}{\rule{0.117pt}{1.750pt}}
-\multiput(899.17,372.37)(8.000,-29.368){2}{\rule{0.400pt}{0.875pt}}
-\multiput(908.59,335.53)(0.488,-2.211){13}{\rule{0.117pt}{1.800pt}}
-\multiput(907.17,339.26)(8.000,-30.264){2}{\rule{0.400pt}{0.900pt}}
-\multiput(916.59,300.28)(0.485,-2.628){11}{\rule{0.117pt}{2.100pt}}
-\multiput(915.17,304.64)(7.000,-30.641){2}{\rule{0.400pt}{1.050pt}}
-\multiput(923.59,266.74)(0.488,-2.145){13}{\rule{0.117pt}{1.750pt}}
-\multiput(922.17,270.37)(8.000,-29.368){2}{\rule{0.400pt}{0.875pt}}
-\multiput(931.59,234.15)(0.488,-2.013){13}{\rule{0.117pt}{1.650pt}}
-\multiput(930.17,237.58)(8.000,-27.575){2}{\rule{0.400pt}{0.825pt}}
-\put(854.0,475.0){\rule[-0.200pt]{1.686pt}{0.400pt}}
-\put(171.0,131.0){\rule[-0.200pt]{0.400pt}{83.110pt}}
-\put(171.0,131.0){\rule[-0.200pt]{185.011pt}{0.400pt}}
+\put(565,29){\makebox(0,0){Number of Nodes}}
+\put(565,538){\makebox(0,0){Hadoop 2 WordCount Runtimes}}
+\put(233,187){\usebox{\plotpoint}}
+\multiput(233.58,187.00)(0.498,1.741){79}{\rule{0.120pt}{1.485pt}}
+\multiput(232.17,187.00)(41.000,138.917){2}{\rule{0.400pt}{0.743pt}}
+\multiput(274.00,329.58)(4.300,0.491){17}{\rule{3.420pt}{0.118pt}}
+\multiput(274.00,328.17)(75.902,10.000){2}{\rule{1.710pt}{0.400pt}}
+\multiput(357.00,339.58)(0.955,0.499){171}{\rule{0.863pt}{0.120pt}}
+\multiput(357.00,338.17)(164.208,87.000){2}{\rule{0.432pt}{0.400pt}}
+\multiput(523.00,424.92)(2.572,-0.499){127}{\rule{2.149pt}{0.120pt}}
+\multiput(523.00,425.17)(328.539,-65.000){2}{\rule{1.075pt}{0.400pt}}
+\put(233,187){\makebox(0,0){$+$}}
+\put(274,329){\makebox(0,0){$+$}}
+\put(357,339){\makebox(0,0){$+$}}
+\put(523,426){\makebox(0,0){$+$}}
+\put(856,361){\makebox(0,0){$+$}}
+\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{83.110pt}}
+\put(191.0,131.0){\rule[-0.200pt]{180.193pt}{0.400pt}}
 \put(939.0,131.0){\rule[-0.200pt]{0.400pt}{83.110pt}}
-\put(171.0,476.0){\rule[-0.200pt]{185.011pt}{0.400pt}}
+\put(191.0,476.0){\rule[-0.200pt]{180.193pt}{0.400pt}}
 \end{picture}
